<resources>
    <string name="app_name">Wandroid</string>

    <string name="main_tab_home">首页</string>
    <string name="main_tab_category">体系</string>
    <string name="main_tab_mine">我的</string>

    <string name="home_search_hint">搜索</string>

    <string name="article_author_label">作者：</string>
    <string name="article_share_label">分享：</string>
    <string name="article_classify_label">分类：</string>
    <string name="article_date_label">时间：</string>

    <string name="webview_error">网络错误，点击重新加载</string>
    <string name="loading_retry">点击加载</string>
    <string name="emoty_data">暂无数据</string>

    <string name="mine_favorite_label">我的收藏</string>
    <string name="mine_setting_label">设置</string>

    <string name="mine_login_first_tip">请先登录</string>

    <string name="login_title">登录</string>
    <string name="login_username_hint">用户名</string>
    <string name="login_password_hint">密码</string>
    <string name="login_new_register">新用户注册</string>
    <string name="login_retrieve_password">忘记密码</string>
    <string name="login_username_illegal">用户名不合法</string>
    <string name="login_password_illegal">密码不合法</string>

    <string name="register_title">注册</string>
    <string name="register_repassword_hint">确认密码</string>
    <string name="register_repassword_illegal">确认密码不一致</string>

    <string name="setting_about_me">关于作者</string>
    <string name="setting_git_link">源码地址</string>
    <string name="logout_label">退出登录</string>

    <string name="search_title">搜索</string>
    <string name="search_input_hint">请输入搜索关键字</string>
    <string name="search_hot_key">热门搜索</string>
    <string name="search_history_key">历史搜索</string>
    <string name="search_clear_keys">清除记录</string>

    <string name="coming_soon">敬请期待～</string>
</resources>
