<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <com.cdh.wandroid.ui.widget.CommonTitleBar
            android:id="@+id/title_bar_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title_bar_login"
            android:layout_margin="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:hint="@string/login_username_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/input_login_username"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_login_new_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/input_login_password"
            app:layout_constraintRight_toRightOf="@+id/input_login_password"
            android:padding="10dp"
            android:text="@string/login_new_register"/>

        <View
            android:layout_width="1px"
            android:layout_height="26dp"
            android:background="@color/divider"
            app:layout_constraintRight_toLeftOf="@+id/tv_login_new_register"
            app:layout_constraintTop_toTopOf="@+id/tv_login_new_register"
            app:layout_constraintBottom_toBottomOf="@+id/tv_login_new_register"/>

        <TextView
            android:id="@+id/tv_login_retrieve_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="1px"
            app:layout_constraintTop_toBottomOf="@+id/input_login_password"
            app:layout_constraintRight_toLeftOf="@+id/tv_login_new_register"
            android:padding="10dp"
            android:text="@string/login_retrieve_password"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/CommonButtonTheme"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_retrieve_password"
            android:layout_margin="30dp"
            android:text="@string/login_title"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>