<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.cdh.wandroid.ui.widget.CommonTitleBar
            android:id="@+id/title_bar_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_search_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title_bar_search"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/iv_search_go"
            android:layout_margin="@dimen/margin_common"
            android:padding="6dp"
            android:lines="1"
            android:maxLength="30"
            android:background="@drawable/home_search_bg"
            android:hint="@string/search_input_hint"
            android:textSize="14dp"/>

        <ImageView
            android:id="@+id/iv_search_go"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="@+id/ed_search_input"
            app:layout_constraintBottom_toBottomOf="@+id/ed_search_input"
            app:layout_constraintLeft_toRightOf="@+id/ed_search_input"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="@dimen/margin_common"
            android:padding="2dp"
            android:src="@mipmap/ic_search_yellow"/>

        <TextView
            android:id="@+id/tv_search_hot_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/ed_search_input"
            app:layout_constraintTop_toBottomOf="@+id/ed_search_input"
            android:layout_marginTop="20dp"
            android:textSize="16dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/search_hot_key"/>

        <com.cdh.wandroid.ui.widget.FlowLayout
            android:id="@+id/flow_search_hot_keys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_search_hot_label"
            android:layout_margin="@dimen/margin_common"/>

        <TextView
            android:id="@+id/tv_search_history_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/tv_search_hot_label"
            app:layout_constraintTop_toBottomOf="@+id/flow_search_hot_keys"
            android:layout_marginTop="@dimen/margin_common"
            android:textSize="16dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/search_history_key"/>

        <TextView
            android:id="@+id/tv_search_clear_keys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_search_history_label"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="@dimen/margin_common"
            android:gravity="center"
            android:drawableStart="@mipmap/ic_delete"
            android:drawablePadding="2dp"
            android:textColor="@color/secondary_text_dark"
            android:textSize="13dp"
            android:text="@string/search_clear_keys"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_search_history_keys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_search_history_label"
            android:layout_margin="@dimen/margin_common"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>